Change language to Russian and update title
Updated the language attribute to Russian and modified the title. Removed unused scripts and added a message indicating successful launch.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Content Generator</title>
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0"
-  }
-}
-</script>
+  <meta charset="UTF-8">
+  <title>Recipe Generate</title>
 </head>
-<body class="bg-gradient-to-br from-purple-50 to-pink-50 min-h-screen flex flex-col">
-    <div id="root" class="flex-grow flex flex-col"></div>
-    <script type="module" src="/index.tsx"></script>
+<body>
+  <h1>Сайт работает 🚀</h1>
+  <p>GitHub Pages успешно запущен.</p>
 </body>
 </html>
